c_header/nlopt.h

#  define libname "libnlopt.so"
typedef double (*nlopt_func)(unsigned n, const double *x,
			     double *gradient, /* NULL if not needed */
			     void *func_data);
typedef void (*nlopt_mfunc)(unsigned m, double *result,
			    unsigned n, const double *x,
			     double *gradient, /* NULL if not needed */
			     void *func_data);
/* A preconditioner, which preconditions v at x to return vpre. 
   (The meaning of "preconditioning" is algorithm-dependent.) */
typedef void (*nlopt_precond)(unsigned n, const double *x, const double *v,
			      double *vpre, void *data);
typedef enum {
     /* Naming conventions:

        NLOPT_{G/L}{D/N}_* 
	    = global/local derivative/no-derivative optimization, 
              respectively 
 
	*_RAND algorithms involve some randomization.

	*_NOSCAL algorithms are *not* scaled to a unit hypercube
	         (i.e. they are sensitive to the units of x)
	*/

     NLOPT_GN_DIRECT = 0,
     NLOPT_GN_DIRECT_L,
     NLOPT_GN_DIRECT_L_RAND,
     NLOPT_GN_DIRECT_NOSCAL,
     NLOPT_GN_DIRECT_L_NOSCAL,
     NLOPT_GN_DIRECT_L_RAND_NOSCAL,

     NLOPT_GN_ORIG_DIRECT,
     NLOPT_GN_ORIG_DIRECT_L,

     NLOPT_GD_STOGO,
     NLOPT_GD_STOGO_RAND,

     NLOPT_LD_LBFGS_NOCEDAL,

     NLOPT_LD_LBFGS,

     NLOPT_LN_PRAXIS,

     NLOPT_LD_VAR1,
     NLOPT_LD_VAR2,

     NLOPT_LD_TNEWTON,
     NLOPT_LD_TNEWTON_RESTART,
     NLOPT_LD_TNEWTON_PRECOND,
     NLOPT_LD_TNEWTON_PRECOND_RESTART,

     NLOPT_GN_CRS2_LM,

     NLOPT_GN_MLSL,
     NLOPT_GD_MLSL,
     NLOPT_GN_MLSL_LDS,
     NLOPT_GD_MLSL_LDS,

     NLOPT_LD_MMA,

     NLOPT_LN_COBYLA,

     NLOPT_LN_NEWUOA,
     NLOPT_LN_NEWUOA_BOUND,

     NLOPT_LN_NELDERMEAD,
     NLOPT_LN_SBPLX,

     NLOPT_LN_AUGLAG,
     NLOPT_LD_AUGLAG,
     NLOPT_LN_AUGLAG_EQ,
     NLOPT_LD_AUGLAG_EQ,

     NLOPT_LN_BOBYQA,

     NLOPT_GN_ISRES,

     /* new variants that require local_optimizer to be set,
	not with older constants for backwards compatibility */
     NLOPT_AUGLAG,
     NLOPT_AUGLAG_EQ,
     NLOPT_G_MLSL,
     NLOPT_G_MLSL_LDS,

     NLOPT_LD_SLSQP,

     NLOPT_LD_CCSAQ,

     NLOPT_GN_ESCH,

     NLOPT_NUM_ALGORITHMS /* not an algorithm, just the number of them */
} nlopt_algorithm;
const char* nlopt_algorithm_name(nlopt_algorithm a);
typedef enum {
     NLOPT_FAILURE = -1, /* generic failure code */
     NLOPT_INVALID_ARGS = -2,
     NLOPT_OUT_OF_MEMORY = -3,
     NLOPT_ROUNDOFF_LIMITED = -4,
     NLOPT_FORCED_STOP = -5,
     NLOPT_SUCCESS = 1, /* generic success code */
     NLOPT_STOPVAL_REACHED = 2,
     NLOPT_FTOL_REACHED = 3,
     NLOPT_XTOL_REACHED = 4,
     NLOPT_MAXEVAL_REACHED = 5,
     NLOPT_MAXTIME_REACHED = 6
} nlopt_result;
#define NLOPT_MINF_MAX_REACHED NLOPT_STOPVAL_REACHED
void nlopt_srand(unsigned long seed);
void nlopt_srand_time(void);
void nlopt_version(int *major, int *minor, int *bugfix);
/*************************** OBJECT-ORIENTED API **************************/
/* The style here is that we create an nlopt_opt "object" (an opaque pointer),
   then set various optimization parameters, and then execute the
   algorithm.  In this way, we can add more and more optimization parameters
   (including algorithm-specific ones) without breaking backwards
   compatibility, having functions with zillions of parameters, or
   relying non-reentrantly on global variables.*/

struct nlopt_opt_s; /* opaque structure, defined internally */
typedef struct nlopt_opt_s *nlopt_opt;
/* the only immutable parameters of an optimization are the algorithm and
   the dimension n of the problem, since changing either of these could
   have side-effects on lots of other parameters */
nlopt_opt nlopt_create(nlopt_algorithm algorithm, unsigned n);
void nlopt_destroy(nlopt_opt opt);
nlopt_opt nlopt_copy(const nlopt_opt opt);
nlopt_result nlopt_optimize(nlopt_opt opt, double *x,
					 double *opt_f);
nlopt_result nlopt_set_min_objective(nlopt_opt opt, nlopt_func f, 
						  void *f_data);
nlopt_result nlopt_set_max_objective(nlopt_opt opt, nlopt_func f, 
						  void *f_data);
nlopt_result nlopt_set_precond_min_objective(nlopt_opt opt, nlopt_func f, nlopt_precond pre, void *f_data);
nlopt_result nlopt_set_precond_max_objective(nlopt_opt opt, nlopt_func f, nlopt_precond pre, void *f_data);
nlopt_algorithm nlopt_get_algorithm(const nlopt_opt opt);
unsigned nlopt_get_dimension(const nlopt_opt opt);
const char* nlopt_get_errmsg(nlopt_opt opt);
/* constraints: */

nlopt_result nlopt_set_lower_bounds(nlopt_opt opt, 
						 const double *lb);
nlopt_result nlopt_set_lower_bounds1(nlopt_opt opt, double lb);
nlopt_result nlopt_get_lower_bounds(const nlopt_opt opt, 
						 double *lb);
nlopt_result nlopt_set_upper_bounds(nlopt_opt opt, 
						 const double *ub);
nlopt_result nlopt_set_upper_bounds1(nlopt_opt opt, double ub);
nlopt_result nlopt_get_upper_bounds(const nlopt_opt opt,
						 double *ub);
nlopt_result nlopt_remove_inequality_constraints(nlopt_opt opt);
nlopt_result nlopt_add_inequality_constraint(nlopt_opt opt,
							  nlopt_func fc,
							  void *fc_data,
							  double tol);
nlopt_result nlopt_add_precond_inequality_constraint(
     nlopt_opt opt, nlopt_func fc, nlopt_precond pre, void *fc_data,
     double tol);
nlopt_result nlopt_add_inequality_mconstraint(nlopt_opt opt,
							    unsigned m,
							    nlopt_mfunc fc,
							    void *fc_data,
							    const double *tol);
nlopt_result nlopt_remove_equality_constraints(nlopt_opt opt);
nlopt_result nlopt_add_equality_constraint(nlopt_opt opt,
							nlopt_func h,
							void *h_data,
							double tol);
nlopt_result nlopt_add_precond_equality_constraint(
     nlopt_opt opt, nlopt_func h, nlopt_precond pre, void *h_data,
     double tol);
nlopt_result nlopt_add_equality_mconstraint(nlopt_opt opt,
							  unsigned m,
							  nlopt_mfunc h,
							  void *h_data,
							  const double *tol);